# Pack-a-Punch

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
config/: model_config.yml
docker/: Dockerfile.serve  Dockerfile.train  docker-compose.yml
notebooks/: benchmark_quality.ipynb
scripts/: benchmark.py  benchmark_quality.py  benchmark_test_set.py  distribute_data.py  generate_expanded_dataset.py  serve.py  train.py
src/: __init__.py  config.py  config_loader.py
src/data/test/ai/: ai3.txt
src/inference/: __init__.py  batching.py  engine.py  pytorch_engine.py  server.py
src/models/: config.json  tokenizer.json  tokenizer_config.json
src/training/: __init__.py  dataset.py  distillation.py  export_onnx.py  export_optimum.py  trainer.py
tests/: test_inference.py
