[project]
name = "pack-a-punch"
version = "0.1.0"
description = "Binary classification system using Italian ModernBERT"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}

[project.scripts]
pap-train = "scripts.train:main"
pap-serve = "scripts.serve:main"
pap-benchmark = "scripts.benchmark:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
